--- a/Frontend/Level-2/package.json
+++ b/Frontend/Level-2/package.json
@@ -16,6 +16,7 @@
     "moment-timezone": "^0.6.0",
     "react": "^19.1.0",
     "react-date-picker": "^11.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2"
   },
